erDiagram
    companies ||--o{ stores : owns
    stores ||--o{ warehouses : operates
    warehouses ||--o{ warehouse_locations : contains
    people ||--o| users : has_account
    users ||--o{ user_roles : receives
    roles ||--o{ user_roles : grants
    brands ||--o{ products : brands
    categories ||--o{ categories : parents
    categories ||--o{ products : classifies
    units_of_measure ||--o{ products : primary_unit
    products ||--o{ product_units : permits
    units_of_measure ||--o{ product_units : measures
    products ||--o{ product_variants : has
    products ||--o{ product_options : defines
    product_options ||--o{ option_values : permits
    product_variants ||--o{ variant_option_values : selects
    option_values ||--o{ variant_option_values : assigned
    product_variants ||--o{ product_barcodes : identifies
    product_units ||--o{ product_barcodes : specifies
    product_variants ||--o{ variant_unit_prices : prices
    product_units ||--o{ variant_unit_prices : sells_as
    suppliers ||--o{ purchases : supplies
    warehouses ||--o{ purchases : receives
    purchases ||--o{ purchase_items : contains
    purchase_items ||--o{ inventory_lots : creates
    product_variants ||--o{ inventory_lots : batches
    warehouses ||--o{ inventory_lots : stores
    inventory_lots ||--o{ inventory_balances : balances
    warehouse_locations ||--o{ inventory_balances : holds
    inventory_lots ||--o{ inventory_movements : moves
    warehouse_locations ||--o{ inventory_movements : at
    stores ||--o{ document_series : issues
    document_series ||--o{ sales : numbers
    people ||--o{ sales : buys
    users ||--o{ sales : sells
    cash_sessions ||--o{ sales : records
    sales ||--o{ sale_items : contains
    product_variants ||--o{ sale_items : sells
    product_units ||--o{ sale_items : uses
    sale_items ||--o{ sale_item_lots : consumes
    inventory_lots ||--o{ sale_item_lots : allocated
    sales ||--o{ payments : paid_by
    stores ||--o{ cash_registers : has
    cash_registers ||--o{ cash_sessions : opens
    users ||--o{ cash_sessions : operates
    cash_sessions ||--o{ cash_movements : records
    payments ||--o| cash_movements : produces
